[tool.poetry]
name = "changeapi"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
uvicorn = {extras = ["standard"], version = "^0.17.6"}
hypercorn = "^0.13.2"
fastapi = "^0.104.1"
SQLAlchemy = "^1.4.37"
alembic = "^1.8.0"
atomicwrites = "^1.4.0"
pydantic-settings = "^2.1.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
